# rendersoft

./: CMakeLists.txt  ImageDraw.h  TGA_Image.cpp  TGA_Image.h  main.cpp
Math/: Color.cpp  Color.h  Math.cpp  Math.h  MathDefine.h  MathHelper.h  Matrix.cpp  Matrix.h  Quaternation.cpp  Quaternation.h  Vector.h
Render/: Model.cpp  Model.h
